# DreamOps

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  DATABASE_SETUP_COMPLETE.md  DATABASE_SETUP_GUIDE.md  DATABASE_TESTING_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  GITHUB_SECRETS.md  GRAFANA_INTEGRATION_SETUP.md  KUBERNETES_INTEGRATION_SUMMARY.md  QUICK_DB_TEST.md  README.md  README_original.md.backup  check-db-setup.py  check-deployment-ready.sh  crash-loop-test.yaml  docker-compose.yml  docker-dev.sh  enhanced_capabilities_overview.py  fuck_kubernetes.sh  main.py  memory-pressure-test.yaml  package-lock.json  push_to_github.sh  pyproject.toml  render-prod.yaml  render-staging.yaml  setup_git_auth.md  simple-db-test.js  simulate_pagerduty_simple.sh  start-dev-with-mock-payments.sh  start-dev.sh  test-docker-setup.sh  test-neon-connections.js
backend/: .dockerignore  .env.eks  .env.example  .env.kind  .env.local.example  .env.phonepe  .env.production.example  .env.staging.example  .gitignore  .k8s_auth_key  API_ENDPOINTS.md  API_QUICKSTART.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  FINAL-FIXED-SETUP.md  FIX_INTEGRATIONS.md  JSON_SERIALIZATION_FIX.md  K8S_MCP_INTEGRATION.md  MERGE-CONFLICTS-RESOLVED.md  PAGERDUTY-QUICK-START.md  PAGERDUTY_SETUP.md  README-KIND-SETUP.md  README.md  README_BACKEND.md  REMEDIATION_FIX_SUMMARY.md  TESTING-RESULTS.md  YOLO_MODE_FIXES.md  api_server.py  backend-bandit-results.json  broken-app.yaml  check_notion_activity.py  clear_users.py  debug_phonepe.py  demo_chaos_insights.py  demo_github_mcp.py  demo_github_mcp_startup.py  demo_k8s_debug.py  extract_imports.py  (+63 more)
backend/.claude/: settings.local.json
backend/examples/: demo_integration.py  demo_k8s_debug.py  enhanced_capabilities_overview.py  enhanced_demo.py  k8s_incident_handler.py  offline_demo.py
backend/scripts/: find_kubectl_usage.py  k8s_mcp_assessment.py  test_api_endpoints.py  (+2 more)
(+469 files in other folders)
