[project]
name = "oncall-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.6.3",
    "anthropic>=0.54.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "kubernetes>=30.1.0",
    "asyncio>=3.4.3",
]
